Fixed dark mode

--- a/App.css
+++ b/App.css
@@ -22,7 +22,9 @@ main, header {
 }
 
 main {
+    min-height: calc(100vh - 72px);
     padding: 24px;
+    background-color: var(--background-color);
 }
 
 a {
